Tue Jun 12 03:21:03 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* reloc.c, reloc.h, lit.c, symbol.h, m_cpuctrl.c, help_cop.c,
	m_cpumem.c, directive_data.c, area.c, directive_data.h, area.h,
	value.h: Get rid of Reloc_QueueExprUpdate.
	* lex.c: Add comment.
	* regression/tests_pass/adr.s: Update as we can now generate MOV/MVN
	instead of ADD/SUB.
	* regression/tests_pass/include/load_literal_basic.s: Add comments.
	* regression/tests_pass/ldr_from_addr.s: Enhance testcase.
	* regression/tests_pass/operator_string.s: Likewise.
	* configure.ac: Increase version to 2.01.

Tue Jun 12 03:13:01 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* code.c (Code_Free): Make Code ptr argument const.
	* code.h (Code_Free): Likewise.

Tue Jun 12 03:09:56 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/builtinvar_pc.s: Rename areas Code4 to Code5
	and 2nd Code3 to Code4 so that the new Code4 is really testing what
	it should test.

Tue Jun 12 02:35:24 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* lit.c (Lit_DumpPool): Convert late defined integer symbol value into
	floating point value when used as floating point literal.
	* regression/tests_pass/fpe_literal.s: Enhance test case.

Fri Jun  8 01:09:17 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	Based on https://www.riscosopen.org/content/sales/dde-changes-20-to-21
	* area.h: Add info AOF area attribute bit 31
	* symbol.h: Add info on AOF symbol attribute bit 13.

Fri May 18 20:46:41 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* input.c (inputEnvSub): Remove.
	(Input_ArgSub): No longer call inputEnvSub.  Simplify.
	* filename.c (FN_AnyToNative): Resolve RISC OS OS variable use in
	filenames on non-RISC OS platforms.
	* directive_file.c (c_get, c_lnk): Fix memory leak.

Fri May 18 18:28:20 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* macros.c (c_macro): Prevent dollar expansion between vertical bar
	characters.
	* regression/tests_pass/variable_substitution.s: Enhance test.
